refactor: :truck: use the domain object `Feature` rather than `Task`
update any var names

--- a/api/dockerfile
+++ b/api/dockerfile
@@ -7,8 +7,8 @@ COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -o /tasks-api
+RUN CGO_ENABLED=0 GOOS=linux go build -o /features-api
 
 EXPOSE 8083
 
-CMD ["/tasks-api" ]
+CMD ["/features-api" ]
