--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3.7'
 services:
-  tasks-api:
+  features-api:
     build: .
     ports:
       - "8083:8083"
-    command: /tasks-api --reload
+    command: /features-api --reload
     environment:
       DB_URL: "mongodb://database:27017/pairing-challenge"
     volumes:
